src/snapshots/bem__parser__tests__parse_block_with_parentheses.snap
---
source: src/parser.rs
expression: e.to_string()
---
Pest parsing error:  --> 1:4
  |
1 | foo(bar,baz)
  |    ^---
  |
  = expected EOI, modifiers, or element
